--- a/bower.json
+++ b/bower.json
@@ -6,11 +6,7 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "1.4.x",
-    "angular-resource": "1.4.x",
-    "ui-router": "0.2.x",
-    "angular-material": "0.11.x",
     "ionicons": "latest",
-    "sass-material-colors": "latest"
+    "barebone": "latest"
   }
 }
