--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "material-design-icons": "2.2.3",
     "react": "15.1.0",
-    "react-dom": "15.1.0"
+    "react-dom": "15.1.0",
+    "react-mdl": "1.5.4"
   },
   "devDependencies": {
     "babel-cli": "6.9.0",
@@ -14,7 +16,11 @@
     "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
+    "css-loader": "0.23.1",
+    "file-loader": "0.8.5",
     "react-hot-loader": "1.3.0",
+    "style-loader": "0.13.1",
+    "url-loader": "0.5.7",
     "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1"
   },
