--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "classnames": "2.2.5",
     "material-design-icons": "2.2.3",
+    "normalize.css": "4.1.1",
     "react": "15.1.0",
+    "react-addons-css-transition-group": "15.1.0",
     "react-dom": "15.1.0",
-    "react-mdl": "1.5.4"
+    "react-toolbox": "0.16.2",
+    "roboto-fontface": "0.4.5"
   },
   "devDependencies": {
     "babel-cli": "6.9.0",
@@ -18,7 +22,9 @@
     "babel-preset-stage-0": "6.5.0",
     "css-loader": "0.23.1",
     "file-loader": "0.8.5",
+    "node-sass": "3.4.2",
     "react-hot-loader": "1.3.0",
+    "sass-loader": "3.2.0",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.1",
