--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hot-loader": "1.3.0",
     "sass-loader": "3.2.0",
     "style-loader": "0.13.1",
+    "toolbox-loader": "0.0.3",
     "url-loader": "0.5.7",
     "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1"
