--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-polyfill": "6.9.1",
     "classnames": "2.2.5",
+    "isomorphic-fetch": "2.2.1",
     "material-design-icons": "2.2.3",
     "normalize.css": "4.1.1",
     "react": "15.1.0",
@@ -15,6 +16,7 @@
     "react-router": "2.4.1",
     "react-toolbox": "0.16.2",
     "redux": "3.5.2",
+    "redux-thunk": "2.1.0",
     "roboto-fontface": "0.4.5"
   },
   "devDependencies": {
