--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-polyfill": "6.9.1",
     "classnames": "2.2.5",
     "isomorphic-fetch": "2.2.1",
+    "lodash": "^4.13.1",
     "material-design-icons": "2.2.3",
     "normalize.css": "4.1.1",
     "react": "15.1.0",
