feat(schedules): add basic schedule container

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "babel-polyfill": "6.9.1",
     "classnames": "2.2.5",
     "isomorphic-fetch": "2.2.1",
-    "lodash": "^4.13.1",
+    "lodash": "4.13.1",
     "material-design-icons": "2.2.3",
     "normalize.css": "4.1.1",
     "react": "15.1.0",
@@ -15,6 +15,7 @@
     "react-dom": "15.1.0",
     "react-redux": "4.4.5",
     "react-router": "2.4.1",
+    "react-router-redux": "4.0.5",
     "react-toolbox": "0.16.2",
     "redux": "3.5.2",
     "redux-thunk": "2.1.0",
