feat(project): add sagas

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-router-redux": "4.0.5",
     "react-toolbox": "0.16.2",
     "redux": "3.5.2",
-    "redux-thunk": "2.1.0",
+    "redux-saga": "0.10.5",
     "reselect": "2.5.1",
     "roboto-fontface": "0.4.5"
   },
