--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-polyfill": "6.9.1",
     "classnames": "2.2.5",
     "isomorphic-fetch": "2.2.1",
+    "localforage": "1.4.2",
     "lodash": "4.13.1",
     "material-design-icons": "2.2.3",
     "normalize.css": "4.1.1",
@@ -18,6 +19,7 @@
     "react-router-redux": "4.0.5",
     "react-toolbox": "0.16.2",
     "redux": "3.5.2",
+    "redux-persist": "3.2.2",
     "redux-saga": "0.10.5",
     "reselect": "2.5.1",
     "roboto-fontface": "0.4.5"
