--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "redux-persist": "3.2.2",
     "redux-saga": "0.10.5",
     "reselect": "2.5.1",
-    "roboto-fontface": "0.4.5"
+    "roboto-fontface": "0.4.5",
+    "serviceworker-webpack-plugin": "0.1.3"
   },
   "devDependencies": {
     "babel-cli": "6.9.0",
@@ -32,6 +33,8 @@
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
     "css-loader": "0.23.1",
+    "express": "4.13.4",
+    "express-http-proxy": "0.7.0",
     "file-loader": "0.8.5",
     "node-sass": "3.4.2",
     "react-hot-loader": "1.3.0",
@@ -44,7 +47,8 @@
   },
   "scripts": {
     "start": "babel-node scripts/server.js",
-    "build": "babel-node scripts/build.js"
+    "build": "babel-node scripts/build.js",
+    "production": "babel-node scripts/production.js"
   },
   "author": "",
   "license": "MIT",
