--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "normalize.css": "4.1.1",
     "react": "15.1.0",
     "react-addons-css-transition-group": "15.1.0",
+    "react-css-themr": "1.1.0",
     "react-dom": "15.1.0",
     "react-redux": "4.4.5",
     "react-router": "2.4.1",
