feat(schedule): add schedule view

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-addons-css-transition-group": "15.1.0",
     "react-css-themr": "1.1.0",
     "react-dom": "15.1.0",
+    "react-motion": "0.4.4",
     "react-redux": "4.4.5",
     "react-router": "2.4.1",
     "react-router-redux": "4.0.5",
+    "react-swipeable-views": "0.6.3",
     "react-toolbox": "1.0.1",
     "redux": "3.5.2",
     "redux-persist": "3.2.2",
