--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-es2015": "6.9.0",
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-0": "6.5.0",
+    "cordova": "6.2.0",
     "css-loader": "0.23.1",
     "express": "4.13.4",
     "express-http-proxy": "0.7.0",
@@ -42,15 +43,18 @@
     "node-sass": "3.4.2",
     "react-hot-loader": "1.3.0",
     "sass-loader": "3.2.0",
+    "script-loader": "0.7.0",
     "style-loader": "0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.1",
     "webpack-bundle-size-analyzer": "2.0.2",
+    "webpack-cordova-plugin": "0.1.6",
     "webpack-dev-server": "1.14.1"
   },
   "scripts": {
     "start": "babel-node scripts/server.js",
     "build": "babel-node scripts/build.js",
+    "build:android": "babel-node scripts/cordova.js android",
     "production": "babel-node scripts/production.js",
     "analyse": "babel-node scripts/build.js json | webpack-bundle-size-analyzer"
   },
